# clanek-matrike

./: .gitignore  CMakeLists.txt  LICENSE  README.md
latex/: main.tex  viri.bib
latex/img/: viri.bib
plots/: plot.qti  plot_all_5000.qti  plot_all_5000_new.qti  plot_classic_25.qti  plot_classic_50.qti  plot_classic_anomaly.qti  plot_recursive.qti
programi/: CMakeLists.txt  classic.cpp  correctness_test.cpp  main  matrix.cpp  matrix.h  newtests.cpp  prog_test  rec_transposed.cpp  recursive.cpp  rez.txt  runTests.fish  scube.cpp  scube.cppX  scube_X.cpp  shared_func.cpp  sta_test.cpp  strassen.cpp  strassen_transposed.cpp  test.cpp  tests.cpp  tests_mitja_classic_25.csv  transposed.cpp
programi/auto_optimize/: CMakeLists.txt  Constants.h  Constants_unset.h  auto_optimize.sh  classic.cpp  extractBest.py  main  matrix.cpp  matrix.h  matrix14  matrix14.cpp  matrix16.cpp  matrix20  matrix20.cpp  matrix_unset_const_h  newtests.cpp  rec_transposed.cpp  scube.cpp  shell  shellcsv  transposed.cpp
programi/auto_optimize/Output/: resoults.txt  resoults1.txt  resoults2.txt  resoults_recursive.txt  resoults_subcub.txt
programi/test_csvs/: tests.csv  tests_all_coarse.csv  tests_blas_vs_subcubicT_small.csv  tests_classic_anomaly.csv  tests_classic_large.csv  tests_classic_large25-old.csv  tests_classic_large25.csv  tests_recursive_large25.csv  tests_strassen_vs_subcubic.csv
programi/testne_matrike/: strassen.cpp  test0_32.csv  test1_96.csv  test2_160.csv  test3_224.csv  test4_288.csv
